--- a/scss/style.css
+++ b/scss/style.css
@@ -10,4 +10,86 @@
 html {
   font-size: 62.5%;
 }
+
+body {
+  background: #1c2431;
+}
+
+.header {
+  width: 100%;
+  position: relative;
+  color: white;
+}
+
+.header .header__wrapper {
+  position: absolute;
+  top: 15rem;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  text-align: center;
+}
+
+.header__title {
+  font-size: 4rem;
+  font-family: 'Raleway', sans-serif;
+  margin-top: 3.5rem;
+}
+
+.header__describe {
+  font-size: 1.8rem;
+  font-family: 'Open Sans', sans-serif;
+  margin-top: 2.5rem;
+}
+
+.header__btn {
+  font-size: 1.4rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  color: white;
+  padding: 1.5rem 9rem;
+  border: none;
+  border-radius: 5rem;
+  background-color: cornflowerblue;
+  margin-top: 3.5rem;
+  margin-bottom: 3rem;
+  background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+}
+
+.nav {
+  width: 90%;
+  position: absolute;
+  top: 4rem;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.nav__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav__item {
+  margin-right: 5.5rem;
+}
+
+.nav__link {
+  color: white;
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.8rem;
+}
 /*# sourceMappingURL=style.css.map */
