--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -41,10 +41,7 @@ body {
         background-color: cornflowerblue;
         margin-top: 3.5rem;
         margin-bottom: 3rem;
-        // background-color: #0093E9;
-        background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-        // background-image: linear-gradient(160deg, hsl(176, 68%, 64%),hsl(198, 60%, 50%);
-        
+        background: linear-gradient(90deg, hsl(176, 68%, 64%),hsl(198, 60%, 50%) );
     }
 }
 
