--- a/scss/style.css
+++ b/scss/style.css
@@ -53,7 +53,8 @@ body {
   background-color: cornflowerblue;
   margin-top: 3.5rem;
   margin-bottom: 3rem;
-  background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+  background: -webkit-gradient(linear, left top, right top, from(#65e2d9), to(#339ecc));
+  background: linear-gradient(90deg, #65e2d9, #339ecc);
 }
 
 .nav {
