--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -10,12 +10,38 @@ body {
     position: relative;
     color: $light;
 
-    .header__wrapper {
+    .nav {
+        width: 90%;
         position: absolute;
-        top: 15rem;
+        top: 4rem;
         left: 50%;
         transform: translateX(-50%);
+        display: flex;
+        justify-content: space-between;
+    
+        &__menu {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+    
+        &__item {
+            margin-right: 5.5rem;
+        }
+    
+        &__link {
+            color: $light;
+            font-family: 'Raleway', sans-serif;
+            font-size: 1.8rem;
+        }
+    }
+
+    .header__wrapper {
         text-align: center;
+    }
+
+    &__image-intro {
+        margin-top: 20rem;
     }
 
     &__title {
@@ -42,34 +68,11 @@ body {
         margin-top: 3.5rem;
         margin-bottom: 3rem;
         background: linear-gradient(90deg, hsl(176, 68%, 64%),hsl(198, 60%, 50%) );
+        cursor: pointer;
     }
 }
 
-.nav {
-    width: 90%;
-    position: absolute;
-    top: 4rem;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    justify-content: space-between;
 
-    &__menu {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    &__item {
-        margin-right: 5.5rem;
-    }
-
-    &__link {
-        color: $light;
-        font-family: 'Raleway', sans-serif;
-        font-size: 1.8rem;
-    }
-}
 
 
 
