--- a/scss/style.css
+++ b/scss/style.css
@@ -21,13 +21,49 @@ body {
   color: white;
 }
 
-.header .header__wrapper {
+.header .nav {
+  width: 90%;
   position: absolute;
-  top: 15rem;
+  top: 4rem;
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header .nav__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header .nav__item {
+  margin-right: 5.5rem;
+}
+
+.header .nav__link {
+  color: white;
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.8rem;
+}
+
+.header .header__wrapper {
   text-align: center;
+}
+
+.header__image-intro {
+  margin-top: 20rem;
 }
 
 .header__title {
@@ -55,42 +91,6 @@ body {
   margin-bottom: 3rem;
   background: -webkit-gradient(linear, left top, right top, from(#65e2d9), to(#339ecc));
   background: linear-gradient(90deg, #65e2d9, #339ecc);
-}
-
-.nav {
-  width: 90%;
-  position: absolute;
-  top: 4rem;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.nav__menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.nav__item {
-  margin-right: 5.5rem;
-}
-
-.nav__link {
-  color: white;
-  font-family: 'Raleway', sans-serif;
-  font-size: 1.8rem;
+  cursor: pointer;
 }
 /*# sourceMappingURL=style.css.map */
