--- a/scss/style.css
+++ b/scss/style.css
@@ -72,7 +72,7 @@ body {
   margin-top: 3.5rem;
 }
 
-.header__describe {
+.header__description {
   font-size: 1.8rem;
   font-family: 'Open Sans', sans-serif;
   margin-top: 2.5rem;
@@ -80,7 +80,7 @@ body {
 
 .header__btn {
   font-size: 1.4rem;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   color: white;
   padding: 1.5rem 9rem;
@@ -92,5 +92,77 @@ body {
   background: -webkit-gradient(linear, left top, right top, from(#65e2d9), to(#339ecc));
   background: linear-gradient(90deg, #65e2d9, #339ecc);
   cursor: pointer;
+}
+
+.nav {
+  width: 90%;
+  position: absolute;
+  top: 4rem;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.nav__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav__item {
+  margin-right: 5.5rem;
+}
+
+.nav__link {
+  color: white;
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.8rem;
+}
+
+.features {
+  width: 70%;
+  margin: auto;
+  padding-top: 3rem;
+}
+
+.features__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.features__icon {
+  text-align: center;
+  color: white;
+  width: 41rem;
+  padding: 5rem 2.5rem 2.5rem;
+}
+
+.features__title {
+  font-size: 1.8rem;
+  font-family: 'Raleway', sans-serif;
+  padding: 2rem 0 0.5rem;
+}
+
+.features__description {
+  font-size: 1.4rem;
+  font-family: 'Open Sans', sans-serif;
 }
 /*# sourceMappingURL=style.css.map */
