--- a/scss/style.css
+++ b/scss/style.css
@@ -155,6 +155,21 @@ body {
   padding: 5rem 2.5rem 2.5rem;
 }
 
+.features__icon-wrapper {
+  position: relative;
+  width: 15rem;
+  height: 10rem;
+  margin: auto;
+}
+
+.features__image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
 .features__title {
   font-size: 1.8rem;
   font-family: 'Raleway', sans-serif;
