--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -72,32 +72,6 @@ body {
     }
 }
 
-.nav {
-    width: 90%;
-    position: absolute;
-    top: 4rem;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    justify-content: space-between;
-
-    &__menu {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    &__item {
-        margin-right: 5.5rem;
-    }
-
-    &__link {
-        color: $light;
-        font-family: 'Raleway', sans-serif;
-        font-size: 1.8rem;
-    }
-}
-
 // FEATURES
 
 .features {
@@ -141,6 +115,51 @@ body {
     &__description {
         font-size: 1.4rem;
         font-family: 'Open Sans', sans-serif;
+    }
+}
+
+// TEAM
+
+.team {
+    width: 95%;
+    margin: auto;
+    padding: 11rem 0;
+
+    &__description-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    &__description {
+        color: $light;
+    }
+
+    &__title {
+        font-size: 4rem;
+        font-family: 'Raleway', sans-serif; 
+        margin-bottom: 2rem;
+    }
+
+    &__description-text {
+        font-size: 1.4rem;
+        font-family: 'Open Sans', sans-serif;
+        margin-bottom: 2rem;
+    }
+
+    &__link-wrapper {
+        display: flex;
+        display: inline-block;
+        align-items: center;
+        padding-bottom: 0.5rem;
+        border-bottom: 0.1rem solid  #50B1AF;
+    }
+
+    &__link {
+        font-family: 'Open Sans', sans-serif;
+        font-size: 1.4rem; 
+        color: #50B1AF;
+        margin-right: 0.5rem;
     }
 }
 
