--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -161,6 +161,59 @@ body {
         color: #50B1AF;
         margin-right: 0.5rem;
     }
+
+    .profile {
+        display: flex;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        padding-top: 11rem;
+
+        &__wrapper {
+            width: 35rem;
+            color: $light;
+            background-color: hsl(219, 30%, 18%);
+            padding: 4rem 3rem 0;
+            margin: 1rem;
+            border-radius: 0.5rem;
+        }
+
+        &__quote-text {
+            font-family: 'Open Sans', sans-serif;
+            font-size: 1.4rem;
+        }
+
+        &__info {
+            display: flex;
+            align-items: center;
+            margin: 2rem 0 3rem;
+        }
+
+        &__img-wrapper {
+            width: 4rem;
+            height: 4rem;
+            border-radius: 50%;
+            margin-right: 0.8rem;
+            overflow: hidden;
+        }
+
+        &__img {
+            width: 100%;
+            height: 100%;
+        }
+
+        &__name {
+            font-family: 'Raleway', sans-serif;
+            font-size: 1.2rem;
+        }
+
+        &__work {
+            font-family: 'Open Sans', sans-serif;
+            margin-top: 0.2rem;
+        }
+
+    }
+
+    
 }
 
 
