--- a/scss/style.css
+++ b/scss/style.css
@@ -16,6 +16,28 @@ body {
   color: white;
 }
 
+button {
+  font-size: 1.4rem;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  color: white;
+  padding: 1.5rem 9rem;
+  border: none;
+  border-radius: 5rem;
+  background-color: cornflowerblue;
+  margin-top: 3.5rem;
+  margin-bottom: 3rem;
+  background: -webkit-gradient(linear, left top, right top, from(#65e2d9), to(#339ecc));
+  background: linear-gradient(90deg, #65e2d9, #339ecc);
+  -webkit-box-shadow: 0.3rem 0.3rem 0.7rem #090e16;
+          box-shadow: 0.3rem 0.3rem 0.7rem #090e16;
+  cursor: pointer;
+}
+
+.button--signIn {
+  padding: 1.5rem 3rem;
+}
+
 .header {
   width: 100%;
   position: relative;
@@ -79,22 +101,6 @@ body {
   margin-top: 2.5rem;
 }
 
-.header__btn {
-  font-size: 1.4rem;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-  color: white;
-  padding: 1.5rem 9rem;
-  border: none;
-  border-radius: 5rem;
-  background-color: cornflowerblue;
-  margin-top: 3.5rem;
-  margin-bottom: 3rem;
-  background: -webkit-gradient(linear, left top, right top, from(#65e2d9), to(#339ecc));
-  background: linear-gradient(90deg, #65e2d9, #339ecc);
-  cursor: pointer;
-}
-
 .features {
   width: 70%;
   margin: auto;
@@ -148,7 +154,7 @@ body {
 .team {
   width: 95%;
   margin: auto;
-  padding: 11rem 0;
+  padding: 11rem 0 35rem;
 }
 
 .team__description-wrapper {
@@ -258,6 +264,7 @@ body {
 }
 
 .footer {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -337,5 +344,37 @@ body {
   border-radius: 50%;
   border: 1px solid white;
   margin-right: 2rem;
+}
+
+.signIn {
+  position: absolute;
+  top: -60%;
+  left: 50%;
+  -webkit-transform: translate(-50%, 20%);
+          transform: translate(-50%, 20%);
+  background: #1c2431;
+  padding: 3rem 5rem;
+  text-align: center;
+  border-radius: 0.5rem;
+  -webkit-box-shadow: 0.3rem 0.3rem 0.7rem #090e16;
+          box-shadow: 0.3rem 0.3rem 0.7rem #090e16;
+}
+
+.signIn__title {
+  font-family: 'Raleway', sans-serif;
+}
+
+.signIn__text {
+  padding: 2rem 0;
+}
+
+.signIn__input {
+  width: 60%;
+  border: none;
+  border-radius: 5rem;
+  padding: 1.5rem 3.5rem;
+  margin-right: 2rem;
+  -webkit-box-shadow: 0.3rem 0.3rem 0.7rem #090e16;
+          box-shadow: 0.3rem 0.3rem 0.7rem #090e16;
 }
 /*# sourceMappingURL=style.css.map */
