--- a/scss/style.css
+++ b/scss/style.css
@@ -14,6 +14,9 @@ html {
 body {
   background: #1c2431;
   color: white;
+  background-image: url("/images/bg-curvy-desktop.svg");
+  background-repeat: no-repeat;
+  background-position: 2rem 83rem;
 }
 
 button {
@@ -42,6 +45,7 @@ button {
   width: 100%;
   position: relative;
   color: white;
+  margin-bottom: 7rem;
 }
 
 .header .nav {
@@ -102,12 +106,13 @@ button {
 }
 
 .features {
-  width: 70%;
-  margin: auto;
-  padding-top: 3rem;
+  width: 100%;
+  background: #181f2a;
 }
 
 .features__wrapper {
+  width: 70%;
+  margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -152,6 +157,11 @@ button {
 }
 
 .team {
+  width: 100%;
+  background: #181f2a;
+}
+
+.team__wrapper {
   width: 95%;
   margin: auto;
   padding: 11rem 0 35rem;
@@ -264,7 +274,13 @@ button {
 }
 
 .footer {
+  width: 100%;
   position: relative;
+  background-color: #0b1523;
+  padding-top: 25rem;
+}
+
+.footer__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -273,8 +289,13 @@ button {
           justify-content: space-evenly;
   font-size: 1.4rem;
   font-family: 'Open Sans', sans-serif;
-  background-color: #0b1523;
-  padding: 18rem 2rem 8rem;
+  width: 95%;
+}
+
+.footer__logo {
+  position: absolute;
+  top: 16rem;
+  left: 12rem;
 }
 
 .footer__location {
