--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,6 +1,7 @@
 body {
     background: $dark1;
     color: $light;
+    // filter: blur(1px);
 }
 
 .button {
@@ -516,11 +517,81 @@ body {
         padding: 1.5rem 3.5rem;
         margin-right: 2rem;
         box-shadow: 0.3rem 0.3rem 0.7rem #090e16;
+        outline: none;
+        
+        &:focus {
+        box-shadow: inset 0 0 5px #000000;
+        }
+
+        
 
         @include response(md) {
             width: 100%;
         }
     }
+
+    &__error {
+        color:red;
+        font-size: 1.3rem;
+        visibility: hidden;
+    }
+
+    &__error.show {
+        visibility: visible;
+    }
+}
+
+.modal {
+    position: absolute;
+    position: relative;
+    position: fixed;
+    display: none;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: $light;
+    background-color: hsl(216, 53%, 9%);
+    min-width: 35rem;
+    border: 0.3rem solid $light;
+    border-radius: 0.5rem;
+    box-shadow: 0.3rem 0.3rem 0.7rem #090e16;
+    text-align: center;
+    padding: 10rem;
+    z-index: 5;
+
+    @include response(sm) {
+        padding: 5rem;
+    }
+
+    &__title {
+        font-size: 3.5rem;
+        font-family: 'Raleway', sans-serif;
+        padding-bottom: 1rem;
+
+        @include response(sm) {
+            font-size: 3rem;
+        }
+    }
+
+    &__text {
+        font-size: 1.6rem;
+        font-family: 'Open Sans', sans-serif;
+    }
+
+    &__close {
+        position: absolute;
+        right: 1.5rem;
+        top: 1rem;
+        font-size: 2.5rem;
+        color: $light;
+        background: transparent;
+        border: none;
+        cursor: pointer;
+    }
+}
+
+.modal.show {
+    display: block;
 }
 
 
