--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,7 +1,6 @@
 body {
     background: $dark1;
     color: $light;
-    // filter: blur(1px);
 }
 
 .button {
@@ -56,7 +55,7 @@ body {
     position: relative;
     color: $light;
     padding-bottom: 7rem;
-    background-image: url('/images/bg-curvy-desktop.svg');
+    background-image: url('../images/bg-curvy-desktop.svg');
     background-repeat: no-repeat;
     background-position: 2rem 83rem;
     overflow: hidden;
